# ohc-addon-backend

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-package.yml
app/: dependencies.py  main.py  setup.py
app/routers/: automations.py
app/services/: ha_service.py  home_assistant_service.py  ohc_state.py  settings.py  sync_manager.py
app/services/github/: auth.py  base.py  content.py  errors.py  rest.py
app/utils/: logging.py
src/ohc_backend/: __init__.py  dependencies.py  errors.py  health.py  main.py  setup.py
src/ohc_backend/routers/: automations.py  scripts.py
src/ohc_backend/services/: ha_service.py  settings.py  sync_manager.py
src/ohc_backend/services/github/: auth.py  client.py  content.py  rest.py
src/ohc_backend/services/github/templates/: README.md
src/ohc_backend/utils/: logging.py
tests/: test_health.py  test_ohc_state.py
tests/services/: test_ha_service.py
